# examples

c/: CMakeLists.txt  CMakeLists.vcpkg.txt  Makefile
c+meson/src/: example.c
c+vcpkg/: CMakeLists.txt
c/src/: example.c
cpp/: CMakeLists.txt  vcpkg.json
cpp+meson/src/: example.cc
cpp+vcpkg/: CMakeLists.txt  Makefile
electron/: package-lock.json  package.json
electron/src/main/: index.ts
electron/src/main/window/: index.ts
electron/src/renderer/src/: App.tsx
nodejs/: package-lock.json  package.json
nodejs+CJS/: package.json
nodejs+CJS/src/: index.js
nodejs/src/: index.js
python/: pyproject.toml
python/src/: main.py
